--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,44 +129,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test0.closest_neighbours('boy', n = 20, normalised = True)"
+    "test0.closest_neighbours('sex', n = 20, normalised = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('girl', 0.57432711124420166),\n",
-       " ('man', 0.49152079224586487),\n",
-       " ('prostitute', 0.46955999732017517),\n",
-       " ('Kaos', 0.4693014919757843),\n",
-       " ('blond', 0.46316751837730408),\n",
-       " ('chin', 0.44985249638557434),\n",
-       " ('skinny', 0.44784364104270935),\n",
-       " ('young', 0.44037172198295593),\n",
-       " ('sweatshirt', 0.43969908356666565),\n",
-       " ('Bouvet', 0.43969836831092834),\n",
-       " ('handcuffed', 0.43768453598022461),\n",
-       " ('granddaughter', 0.43252936005592346),\n",
-       " ('doorway', 0.41661480069160461),\n",
-       " ('Veal', 0.41490083932876587),\n",
-       " ('guy', 0.41456231474876404),\n",
-       " ('casually', 0.41155984997749329),\n",
-       " ('Dad', 0.41126567125320435),\n",
-       " ('robe', 0.41063868999481201),\n",
-       " ('handsome', 0.40988144278526306),\n",
-       " ('deadpan', 0.40876543521881104)]"
+       "[('dysphoria', 0.78569173812866211),\n",
+       " ('gender', 0.77998077869415283),\n",
+       " ('genitalia', 0.77246183156967163),\n",
+       " ('genitals', 0.75162947177886963),\n",
+       " ('sexuality', 0.73677951097488403),\n",
+       " ('ethnicity', 0.70837461948394775),\n",
+       " ('ancestry', 0.69910502433776855),\n",
+       " ('paternal', 0.69199049472808838),\n",
+       " ('atypical', 0.69135522842407227),\n",
+       " ('intersex', 0.69105035066604614),\n",
+       " ('orientation', 0.68548166751861572),\n",
+       " ('chromosomes', 0.67502766847610474),\n",
+       " ('biological', 0.66140341758728027),\n",
+       " ('ambiguous', 0.65433657169342041),\n",
+       " ('reassignment', 0.650981605052948),\n",
+       " ('femininity', 0.65078532695770264),\n",
+       " ('underage', 0.64626526832580566),\n",
+       " ('pap', 0.64498692750930786),\n",
+       " ('prescribed', 0.64396840333938599),\n",
+       " ('nausea', 0.63848114013671875)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,29 +193,29 @@
     {
      "data": {
       "text/plain": [
-       "[('girl', 0.57486903667449951),\n",
-       " ('man', 0.49216058850288391),\n",
-       " ('blond', 0.4758516252040863),\n",
-       " ('prostitute', 0.46921071410179138),\n",
-       " ('chin', 0.4583529531955719),\n",
-       " ('skinny', 0.4560280442237854),\n",
-       " ('Bouvet', 0.44736975431442261),\n",
-       " ('sweatshirt', 0.44393137097358704),\n",
-       " ('handcuffed', 0.4398597776889801),\n",
-       " ('young', 0.43736860156059265),\n",
-       " ('Myra', 0.43518692255020142),\n",
-       " ('firefighter', 0.43367159366607666),\n",
-       " ('granddaughter', 0.43335062265396118),\n",
-       " ('guy', 0.42548319697380066),\n",
-       " ('Dad', 0.41924276947975159),\n",
-       " ('girls', 0.41365262866020203),\n",
-       " ('dog', 0.41349080204963684),\n",
-       " ('Veal', 0.41329813003540039),\n",
-       " ('woman', 0.4128774106502533),\n",
-       " ('kid', 0.41278868913650513)]"
+       "[('dysphoria', 0.78498446941375732),\n",
+       " ('gender', 0.77393591403961182),\n",
+       " ('genitalia', 0.76858013868331909),\n",
+       " ('genitals', 0.74456107616424561),\n",
+       " ('sexuality', 0.74238276481628418),\n",
+       " ('ethnicity', 0.69125097990036011),\n",
+       " ('ancestry', 0.68815445899963379),\n",
+       " ('atypical', 0.68062043190002441),\n",
+       " ('orientation', 0.67618608474731445),\n",
+       " ('intersex', 0.67485296726226807),\n",
+       " ('ambiguous', 0.67295408248901367),\n",
+       " ('chromosomes', 0.66357427835464478),\n",
+       " ('biological', 0.65398114919662476),\n",
+       " ('pap', 0.64526712894439697),\n",
+       " ('underage', 0.64467078447341919),\n",
+       " ('genital', 0.64334285259246826),\n",
+       " ('prescribed', 0.64120972156524658),\n",
+       " ('identity', 0.64046990871429443),\n",
+       " ('femininity', 0.63579308986663818),\n",
+       " ('sexual', 0.6357501745223999)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +223,7 @@
    "source": [
     "test1 = similar_words(data_dir_1)\n",
     "test1.normalise()\n",
-    "test1.closest_neighbours('boy', n = 20, normalised = True)\n",
+    "test1.closest_neighbours('sex', n = 20, normalised = True)\n",
     "test1.neighbours"
    ]
   },
