--- a/training_model_test.ipynb
+++ b/training_model_test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12135,6 +12135,217 @@
    "metadata": {},
    "source": [
     "Yes we did it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for some reasons period0 is not training, we do some debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'period2'\n",
+    "data_dir_1 = '/home/paperspace/projects/news_exploration/Data/training_data/period2/'\n",
+    "data_dir_0 = '/home/paperspace/projects/news_exploration/Data/training_data/period1/'\n",
+    "save_dir = data_dir_1\n",
+    "e_dim = 300\n",
+    "n_negs = 40\n",
+    "epoch = 3\n",
+    "mb = 1024\n",
+    "ss_t = 1e-5\n",
+    "conti = False\n",
+    "weights = True\n",
+    "cuda = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 1]: : 0it [00:00, ?it/s]\n",
+      "[Epoch 2]: : 0it [00:00, ?it/s]\n",
+      "[Epoch 3]: : 0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(name = name, data_dir_1 = data_dir_1, save_dir = save_dir,\n",
+    "      e_dim = e_dim, n_negs = n_negs, epoch = epoch, mb = mb,\n",
+    "      ss_t = ss_t, conti = conti, weights = weights, cuda = cuda, data_dir_0 = data_dir_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(data_dir_0 +'train.dat', 'rb') as handle:\n",
+    "    train_0 = pickle.load(handle)\n",
+    "with open(data_dir_1 +'train.dat', 'rb') as handle:\n",
+    "    train_1 = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 2\n",
+    "inp_data_path = '../Data/articles_preprocessed_' + str(i) + '.pickle'\n",
+    "with open(inp_data_path, 'rb') as handle:\n",
+    "    prep_2 = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prep_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the preprocessing did not work for period2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training data generation did not work for period2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from preprocessing import news_preprocess\n",
+    "from training_data_generation import Preprocess\n",
+    "from train import train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = '../Data/'\n",
+    "window = 1\n",
+    "stride = 1\n",
+    "begin_date = 20150901\n",
+    "end_date = 20150904"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 159522/159522 [01:54<00:00, 1392.00it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training for and detecting bigrams\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 159522/159522 [03:07<00:00, 849.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is preprocessed successfully\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 1/2 [00:09<00:09,  9.15s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are  43027 articles in period  0\n",
+      "preprocessing finished for period 0, it has been saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "100%|██████████| 2/2 [00:18<00:00,  9.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are  40671 articles in period  1\n",
+      "preprocessing finished for period 1, it has been saved\n",
+      "articles repartitioned and saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prepro = news_preprocess()\n",
+    "\n",
+    "prepro.pre_process(data_dir + 'signal.csv', 'content', 'published', begin = begin_date, end = end_date)\n",
+    "\n",
+    "prepro.cut_and_slide(data_dir = data_dir, window = window, period = stride)"
    ]
   },
   {
