--- a/exploring_reaily_available_article_data_sets.ipynb
+++ b/exploring_reaily_available_article_data_sets.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,18 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 23%|██▎       | 135/598 [00:30<01:44,  4.44it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_2 = pd.read_csv(data_path+'all-the-news/articles2.csv')\n",
     "data_3 = pd.read_csv(data_path+'all-the-news/articles3.csv')"
@@ -624,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,11 +626,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.concat([data_1,data_2,data_3]).drop(['Unnamed: 0'], axis = 1).to_csv(data_path + 'all-the-news/articles_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_all = pd.concat([data_1,data_2,data_3]).drop(['Unnamed: 0'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data_all.date = [date.replace('/','-') for date in data_all.date]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_all = data_all[[date[:7] == '2016-06' for date in data_all.date]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_all.to_csv(data_path + 'all-the-news/articles_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2000-05-15'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(data_all.date)"
    ]
   },
   {
