--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "data_dir_0 = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period0/'\n",
     "data_dir_1 = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period1/'\n",
     "data_dir_2 = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period2/'\n",
-    "data_dir_3 = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period3/'"
+    "#data_dir_3 = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period3/'"
    ]
   },
   {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +131,6 @@
      "text": [
       "/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/News_data_exploration/neighbourhood.py:17: RuntimeWarning: invalid value encountered in true_divide\n",
       "  self.n_idx2vec = self.idx2vec/l2_norm\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period3/idx2vec.dat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-23db27eb3d4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimilar_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtest3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimilar_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mtest3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/PythonWorkingDirectory/news_exploration/News_data_exploration/neighbourhood.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_dir)\u001b[0m\n\u001b[1;32m     10\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'idx2word.dat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midx2word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m                 \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'idx2vec.dat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midx2vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/training_data/period3/idx2vec.dat'"
      ]
     }
    ],
@@ -153,22 +141,22 @@
     "test1.normalise()\n",
     "test2 = similar_words(data_dir_2)\n",
     "test2.normalise()\n",
-    "test3 = similar_words(data_dir_3)\n",
-    "test3.normalise()"
+    "#test3 = similar_words(data_dir_3)\n",
+    "#test3.normalise()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = 'brexit'"
+    "word = 'referendum'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,35 +167,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('eu', 0.9391635656356812),\n",
-       " ('britain', 0.9367096424102783),\n",
-       " ('referendum', 0.9336940050125122),\n",
-       " ('exit', 0.9305105805397034),\n",
-       " ('uk', 0.9281169176101685),\n",
-       " ('european_union', 0.9156014323234558),\n",
-       " ('britons', 0.9055400490760803),\n",
-       " ('voting', 0.8957501649856567),\n",
-       " ('tomorrow', 0.8924056887626648),\n",
-       " ('independence', 0.8921576142311096),\n",
-       " ('ahead', 0.8837446570396423),\n",
-       " ('leaving', 0.8815494775772095),\n",
-       " ('open', 0.8773015141487122),\n",
-       " ('impact', 0.8771299123764038),\n",
-       " ('uncertainty', 0.8765949606895447),\n",
-       " ('outcome', 0.8720663785934448),\n",
-       " ('editorial', 0.8691046833992004),\n",
-       " ('polls', 0.8688691854476929),\n",
-       " ('british', 0.8677313327789307),\n",
-       " ('stay', 0.8669856190681458)]"
+       "[('brexit', 0.9336940050125122),\n",
+       " ('european_union', 0.9189831018447876),\n",
+       " ('britain', 0.9168353080749512),\n",
+       " ('exit', 0.9126797318458557),\n",
+       " ('eu', 0.9097343683242798),\n",
+       " ('uk', 0.8977057337760925),\n",
+       " ('vote', 0.8923248052597046),\n",
+       " ('polls', 0.8906130790710449),\n",
+       " ('thursday', 0.8894792199134827),\n",
+       " ('voting', 0.8791136741638184),\n",
+       " ('votes', 0.8786565065383911),\n",
+       " ('british', 0.8696985244750977),\n",
+       " ('ahead', 0.8652800917625427),\n",
+       " ('membership', 0.8649871945381165),\n",
+       " ('results', 0.8624143600463867),\n",
+       " ('lead', 0.8580653071403503),\n",
+       " ('victory', 0.8559300303459167),\n",
+       " ('debate', 0.855552077293396),\n",
+       " ('win', 0.8529679775238037),\n",
+       " ('independence', 0.8487247228622437)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,35 +206,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('exit', 0.944815993309021),\n",
-       " ('eu', 0.9423159956932068),\n",
-       " ('britain', 0.9414730072021484),\n",
-       " ('referendum', 0.9360533952713013),\n",
-       " ('uk', 0.9328083395957947),\n",
-       " ('european_union', 0.9217364192008972),\n",
-       " ('britons', 0.9167843461036682),\n",
-       " ('voting', 0.9102171063423157),\n",
-       " ('tomorrow', 0.9101792573928833),\n",
-       " ('goafter', 0.899278998374939),\n",
-       " ('scottish_independence', 0.8978261351585388),\n",
-       " ('independence', 0.8973746299743652),\n",
-       " ('continue_apacebrexit', 0.8971027135848999),\n",
-       " ('outcome', 0.890224039554596),\n",
-       " ('uncertainty', 0.887132465839386),\n",
-       " ('editorial', 0.8868875503540039),\n",
-       " ('polls', 0.8803579211235046),\n",
-       " ('predict', 0.8770049214363098),\n",
-       " ('british', 0.8749314546585083),\n",
-       " ('snp_won', 0.8748005032539368)]"
+       "[('brexit', 0.9360533952713013),\n",
+       " ('european_union', 0.9335820078849792),\n",
+       " ('britain', 0.9248850345611572),\n",
+       " ('eu', 0.9192072749137878),\n",
+       " ('uk', 0.917259931564331),\n",
+       " ('exit', 0.9160120487213135),\n",
+       " ('polls', 0.9019432067871094),\n",
+       " ('vote', 0.898063600063324),\n",
+       " ('voting', 0.8976135849952698),\n",
+       " ('membership', 0.8838874101638794),\n",
+       " ('british', 0.8810110688209534),\n",
+       " ('united_kingdom', 0.8785028457641602),\n",
+       " ('results', 0.8775480389595032),\n",
+       " ('independence', 0.8703095316886902),\n",
+       " ('victory', 0.8703041076660156),\n",
+       " ('votes', 0.8686368465423584),\n",
+       " ('tomorrow', 0.8643980026245117),\n",
+       " ('ahead', 0.8610177636146545),\n",
+       " ('britons', 0.8590670228004456),\n",
+       " ('u_k', 0.8584704399108887)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,35 +245,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('britain', 0.9449349045753479),\n",
-       " ('eu', 0.9430117607116699),\n",
-       " ('exit', 0.9397880434989929),\n",
-       " ('referendum', 0.9390013217926025),\n",
-       " ('uk', 0.9333792924880981),\n",
-       " ('voting', 0.9219726324081421),\n",
-       " ('european_union', 0.9217431545257568),\n",
-       " ('britons', 0.9187378883361816),\n",
-       " ('polls', 0.8933077454566956),\n",
-       " ('results', 0.8812395930290222),\n",
-       " ('outcome', 0.8773514032363892),\n",
-       " ('british', 0.8712339997291565),\n",
-       " ('affect', 0.8684083819389343),\n",
-       " ('u_k', 0.866401731967926),\n",
-       " ('voter', 0.8662026524543762),\n",
-       " ('independence', 0.8653834462165833),\n",
-       " ('membership', 0.8650548458099365),\n",
-       " ('tomorrow', 0.8636869192123413),\n",
-       " ('ahead', 0.858947217464447),\n",
-       " ('uncertainty', 0.8586441874504089)]"
+       "[('european_union', 0.9430748224258423),\n",
+       " ('brexit', 0.9390013217926025),\n",
+       " ('britain', 0.9285773038864136),\n",
+       " ('eu', 0.9282983541488647),\n",
+       " ('uk', 0.9249193072319031),\n",
+       " ('polls', 0.9023624062538147),\n",
+       " ('exit', 0.9012918472290039),\n",
+       " ('united_kingdom', 0.897244930267334),\n",
+       " ('vote', 0.8958840370178223),\n",
+       " ('voting', 0.8946855664253235),\n",
+       " ('membership', 0.8905600905418396),\n",
+       " ('british', 0.8839594721794128),\n",
+       " ('results', 0.8819754123687744),\n",
+       " ('votes', 0.8765967488288879),\n",
+       " ('win', 0.8627730011940002),\n",
+       " ('u_k', 0.856770396232605),\n",
+       " ('victory', 0.8555748462677002),\n",
+       " ('britons', 0.8522752523422241),\n",
+       " ('voted', 0.847105860710144),\n",
+       " ('debate', 0.8416706919670105)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,21 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'asaad',\n",
-       " 'baal_shamin',\n",
-       " 'cambodian_border',\n",
-       " 'drone_strikes',\n",
-       " 'jordanian',\n",
-       " 'shia'}"
+       "{'debate', 'lead', 'thursday', 'win'}"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,16 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'airstrikes', 'antiquities', 'gruesome', 'libya', 'militants', 'sunni'}"
+       "{'britons', 'tomorrow', 'u_k', 'united_kingdom'}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,16 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baghdadi', 'gruesome', 'militants', 'torture'}"
+       "{'ahead', 'independence', 'tomorrow'}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'iraqi', 'isis_militants', 'palmyra', 'tortured'}"
+       "{'debate', 'voted', 'win'}"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
