--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = 'good'"
+    "word = 'referendum'"
    ]
   },
   {
@@ -176,26 +176,26 @@
     {
      "data": {
       "text/plain": [
-       "[('nothing', 0.9994965195655823),\n",
-       " ('ve', 0.9994886517524719),\n",
-       " ('something', 0.9994208812713623),\n",
-       " ('should', 0.9994068145751953),\n",
-       " ('hard', 0.9993849992752075),\n",
-       " ('always', 0.9993712902069092),\n",
-       " ('better', 0.9993569254875183),\n",
-       " ('done', 0.9993535876274109),\n",
-       " ('make', 0.9993394613265991),\n",
-       " ('need', 0.9993332028388977),\n",
-       " ('anyone', 0.9993313550949097),\n",
-       " ('doing', 0.9993266463279724),\n",
-       " ('never', 0.9992914199829102),\n",
-       " ('very', 0.999283492565155),\n",
-       " ('saying', 0.9992535710334778),\n",
-       " ('let', 0.9992479085922241),\n",
-       " ('thought', 0.9992431402206421),\n",
-       " ('now', 0.9992291927337646),\n",
-       " ('feel', 0.9992141723632812),\n",
-       " ('just', 0.9992006421089172)]"
+       "[('exit', 0.9693004488945007),\n",
+       " ('bloc', 0.9667661786079407),\n",
+       " ('issue', 0.9609473347663879),\n",
+       " ('membership', 0.9569995999336243),\n",
+       " ('debate', 0.9566793441772461),\n",
+       " ('remain', 0.956550121307373),\n",
+       " ('polls', 0.9559674859046936),\n",
+       " ('beginning', 0.9548994302749634),\n",
+       " ('trigger', 0.954710841178894),\n",
+       " ('voting', 0.9536980390548706),\n",
+       " ('leaving', 0.9534571170806885),\n",
+       " ('united_kingdom', 0.951850414276123),\n",
+       " ('effect', 0.9508790373802185),\n",
+       " ('episode', 0.9508225321769714),\n",
+       " ('disastrous', 0.9489255547523499),\n",
+       " ('guide', 0.9486316442489624),\n",
+       " ('threat', 0.9480876326560974),\n",
+       " ('fifth', 0.947894275188446),\n",
+       " ('entire', 0.9470741748809814),\n",
+       " ('european_union', 0.9470547437667847)]"
       ]
      },
      "execution_count": 13,
@@ -215,26 +215,26 @@
     {
      "data": {
       "text/plain": [
-       "[('delay', 0.9994755983352661),\n",
-       " ('done', 0.9994615912437439),\n",
-       " ('thought', 0.9994599223136902),\n",
-       " ('ve_got', 0.999438464641571),\n",
-       " ('make', 0.9993642568588257),\n",
-       " ('doing', 0.9993554949760437),\n",
-       " ('always', 0.9993485808372498),\n",
-       " ('never', 0.9993394613265991),\n",
-       " ('lose', 0.9993147253990173),\n",
-       " ('anymore', 0.999313473701477),\n",
-       " ('enough', 0.9992997050285339),\n",
-       " ('ask', 0.9992974996566772),\n",
-       " ('hard', 0.9992954730987549),\n",
-       " ('nothing', 0.9992933869361877),\n",
-       " ('should', 0.9992831945419312),\n",
-       " ('let', 0.9992173910140991),\n",
-       " ('mean', 0.9992027282714844),\n",
-       " ('wouldn_t', 0.9991599321365356),\n",
-       " ('ms_leggero', 0.9991535544395447),\n",
-       " ('find', 0.9991488456726074)]"
+       "[('exit', 0.9635433554649353),\n",
+       " ('united_kingdom', 0.950029194355011),\n",
+       " ('editorial', 0.9489302039146423),\n",
+       " ('issue', 0.9487429261207581),\n",
+       " ('debate', 0.94374018907547),\n",
+       " ('membership', 0.9434525370597839),\n",
+       " ('polls', 0.9401640295982361),\n",
+       " ('bloc', 0.9383368492126465),\n",
+       " ('yield', 0.9378154277801514),\n",
+       " ('voting', 0.9363105893135071),\n",
+       " ('leaving', 0.9331887364387512),\n",
+       " ('european_union', 0.9323802590370178),\n",
+       " ('effect', 0.9316256642341614),\n",
+       " ('northern_ireland', 0.9311627745628357),\n",
+       " ('uncertainty', 0.9290748238563538),\n",
+       " ('results', 0.9272537231445312),\n",
+       " ('fall', 0.9263246059417725),\n",
+       " ('votes', 0.925814151763916),\n",
+       " ('ahead', 0.9249107241630554),\n",
+       " ('trigger', 0.9246854782104492)]"
       ]
      },
      "execution_count": 14,
@@ -254,26 +254,26 @@
     {
      "data": {
       "text/plain": [
-       "[('always', 0.9995263814926147),\n",
-       " ('let', 0.9995176792144775),\n",
-       " ('doing', 0.9994218349456787),\n",
-       " ('wouldn_t', 0.999417245388031),\n",
-       " ('nothing', 0.9993872046470642),\n",
-       " ('ask', 0.9993675351142883),\n",
-       " ('ve_got', 0.9993585348129272),\n",
-       " ('done', 0.9993571043014526),\n",
-       " ('thought', 0.9993331432342529),\n",
-       " ('prioritize', 0.9992806315422058),\n",
-       " ('lam', 0.9992740154266357),\n",
-       " ('thank', 0.9992339611053467),\n",
-       " ('hard', 0.999172568321228),\n",
-       " ('should', 0.9991365671157837),\n",
-       " ('enough', 0.99908846616745),\n",
-       " ('just', 0.9990870952606201),\n",
-       " ('love', 0.9990602731704712),\n",
-       " ('why', 0.9989979267120361),\n",
-       " ('find', 0.9989563226699829),\n",
-       " ('never', 0.9989539980888367)]"
+       "[('united_kingdom', 0.9607036113739014),\n",
+       " ('european_union', 0.9542569518089294),\n",
+       " ('membership', 0.9458673596382141),\n",
+       " ('exit', 0.9436300992965698),\n",
+       " ('stays', 0.937843382358551),\n",
+       " ('bloc', 0.9376928210258484),\n",
+       " ('polls', 0.9346342086791992),\n",
+       " ('uk', 0.9335870742797852),\n",
+       " ('brexit', 0.9315703511238098),\n",
+       " ('results', 0.9287354350090027),\n",
+       " ('debate', 0.9286594390869141),\n",
+       " ('votes', 0.9257169961929321),\n",
+       " ('voting', 0.9240907430648804),\n",
+       " ('e_u', 0.9137635827064514),\n",
+       " ('result', 0.9104113578796387),\n",
+       " ('vote', 0.9102939963340759),\n",
+       " ('u_k', 0.91009122133255),\n",
+       " ('sunderland', 0.9095768928527832),\n",
+       " ('camp', 0.9088003635406494),\n",
+       " ('leave', 0.9049204587936401)]"
       ]
      },
      "execution_count": 15,
@@ -293,26 +293,26 @@
     {
      "data": {
       "text/plain": [
-       "[('crazy', 0.999465823173523),\n",
-       " ('else', 0.9994634389877319),\n",
-       " ('always', 0.9994583129882812),\n",
-       " ('thank', 0.999431312084198),\n",
-       " ('nothing', 0.9994200468063354),\n",
-       " ('wouldn_t', 0.999374508857727),\n",
-       " ('couldn_t', 0.9993047118186951),\n",
-       " ('guess', 0.9992933869361877),\n",
-       " ('hard', 0.9992126822471619),\n",
-       " ('done', 0.9991986751556396),\n",
-       " ('love', 0.9991747736930847),\n",
-       " ('mischel', 0.9991742372512817),\n",
-       " ('knows', 0.9991441369056702),\n",
-       " ('ask', 0.9990262985229492),\n",
-       " ('wanted', 0.9989562034606934),\n",
-       " ('anyone', 0.9989392757415771),\n",
-       " ('never', 0.9989263415336609),\n",
-       " ('thing', 0.9989229440689087),\n",
-       " ('exactly', 0.9989117980003357),\n",
-       " ('flexible', 0.9989096522331238)]"
+       "[('united_kingdom', 0.9509780406951904),\n",
+       " ('exit', 0.950204074382782),\n",
+       " ('european_union', 0.9462379813194275),\n",
+       " ('membership', 0.9431858062744141),\n",
+       " ('stays', 0.9402644634246826),\n",
+       " ('brexit', 0.9331012964248657),\n",
+       " ('uk', 0.9326643347740173),\n",
+       " ('e_u', 0.9260918498039246),\n",
+       " ('polls', 0.9248156547546387),\n",
+       " ('results', 0.9226175546646118),\n",
+       " ('bloc', 0.9225506782531738),\n",
+       " ('swung', 0.9222936034202576),\n",
+       " ('outcome', 0.9222410917282104),\n",
+       " ('debate', 0.9181690216064453),\n",
+       " ('vote', 0.9171704053878784),\n",
+       " ('voting', 0.9138851761817932),\n",
+       " ('victory', 0.9126725196838379),\n",
+       " ('lancaster', 0.9111326932907104),\n",
+       " ('issue', 0.9072451591491699),\n",
+       " ('u_k', 0.9063650965690613)]"
       ]
      },
      "execution_count": 16,
